# Water-ops_Predictor

./: .gitignore  README.md  pyproject.toml
water_ops_predictor.egg-info/: PKG-INFO
waterops/: ingest.py  serve.py  train.py
